// Vitest Snapshot v1

exports[`processes events in a specific month > buffers 1`] = `
[
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
]
`;

exports[`processes events in a specific month > estimated cycle times 1`] = `
Map {
  "{part: part111}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, proc: 1, statGroup: MC, operation: progk}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part111}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 1, statGroup: MC, operation: prog6}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, proc: 2, statGroup: MC, operation: progc}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes events in a specific month > inspections 1`] = `
Map {
  "{part: part222}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 78875,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 78875,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialo",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "workk",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 78875,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialo",
      "time": 2018-01-06T09:57:05.000Z,
      "workorder": "workk",
    },
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 41194,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialq",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workk",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 41194,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 41194,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialq",
      "time": 2018-01-31T09:56:10.000Z,
      "workorder": "workk",
    },
    {
      "cntr": 10,
      "inspType": "Insp1",
      "materialID": 41194,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialq",
      "time": 2018-01-31T10:03:10.000Z,
      "workorder": "workk",
    },
  ],
  "{part: part111}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 62494,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialo",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workv",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 62494,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 62494,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialo",
      "time": 2018-02-02T10:02:10.000Z,
      "workorder": "workv",
    },
    {
      "cntr": 10,
      "inspType": "Insp1",
      "materialID": 62494,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialo",
      "time": 2018-02-02T10:09:10.000Z,
      "workorder": "workv",
    },
  ],
}
`;

exports[`processes events in a specific month > material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqf" => [
      78875,
    ],
    "uniqn" => [
      62494,
    ],
    "uniqv" => [
      41194,
    ],
  },
  "matsById": Map {
    "41194" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:10.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T10:03:10.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 41194,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "78875" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:05.000Z,
      "jobUnique": "uniqf",
      "last_event": 2018-01-06T09:57:05.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 78875,
      "numProcesses": 3,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "62494" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:10.000Z,
      "jobUnique": "uniqn",
      "last_event": 2018-02-02T10:09:10.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 62494,
      "numProcesses": 3,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
  },
}
`;

exports[`processes events in a specific month > pallet cycles 1`] = `
Map {
  "palaa" => [
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-01-06T09:50:05.000Z,
      "y": 44,
    },
  ],
  "palbb" => [
    {
      "active": -1,
      "cntr": 10,
      "x": 2018-01-31T09:56:10.000Z,
      "y": 44,
    },
    {
      "active": -1,
      "cntr": 10,
      "x": 2018-02-02T10:02:10.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes events in a specific month > station cycles 1`] = `
[
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "face5",
        "id": 78875,
        "numproc": 3,
        "part": "part222",
        "proc": 2,
        "serial": "serialo",
        "uniq": "uniqf",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "face5",
        "id": 78875,
        "numproc": 3,
        "part": "part222",
        "proc": 2,
        "serial": "serialo",
        "uniq": "uniqf",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progc",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "face5",
        "id": 78875,
        "numproc": 3,
        "part": "part222",
        "proc": 2,
        "serial": "serialo",
        "uniq": "uniqf",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "faceh",
        "id": 41194,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialq",
        "uniq": "uniqv",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "faceh",
        "id": 41194,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialq",
        "uniq": "uniqv",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "prog6",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "faceh",
        "id": 41194,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialq",
        "uniq": "uniqv",
        "workorder": "workk",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 62494,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serialo",
        "uniq": "uniqn",
        "workorder": "workv",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "facep",
        "id": 62494,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serialo",
        "uniq": "uniqn",
        "workorder": "workv",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progk",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 62494,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serialo",
        "uniq": "uniqn",
        "workorder": "workv",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events > after filter - buffers 1`] = `
[
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
]
`;

exports[`processes last 30 events > after filter - estimated cycle times 1`] = `
Map {
  "{part: part111}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 2, statGroup: MC, operation: prog8}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part222}, proc: 1, statGroup: MC, operation: progt}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, proc: 1, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events > after filter - event counter 1`] = `59`;

exports[`processes last 30 events > after filter - inspections 1`] = `
Map {
  "{part: part222}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 34857,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriall",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workw",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriall",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workw",
    },
  ],
  "{part: part111}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "work7",
    },
    {
      "cntr": 57,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serials",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "work6",
    },
    {
      "cntr": 58,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 56538,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serials",
      "time": 2018-02-08T09:44:10.000Z,
      "workorder": "work6",
    },
    {
      "cntr": 59,
      "inspType": "Insp1",
      "materialID": 56538,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serials",
      "time": 2018-02-08T09:51:10.000Z,
      "workorder": "work6",
    },
  ],
}
`;

exports[`processes last 30 events > after filter - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqi" => [
      70329,
    ],
    "uniqn" => [
      56538,
    ],
    "uniqv" => [
      34857,
    ],
  },
  "matsById": Map {
    "34857" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 34857,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "56538" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-08T09:51:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:10.000Z,
      "jobUnique": "uniqn",
      "last_event": 2018-02-08T09:51:10.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 56538,
      "numProcesses": 2,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > after filter - pallet cycles 1`] = `
Map {
  "palaa" => [],
  "palbb" => [
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  ],
  "palcc" => [
    {
      "active": -1,
      "cntr": 59,
      "x": 2018-02-08T09:44:10.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events > after filter - station cycles 1`] = `
[
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progt",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 50,
    "isLabor": true,
    "material": [
      {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 54,
    "isLabor": false,
    "material": [
      {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progr",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:29:05.000Z,
    "y": 12,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 56,
    "isLabor": true,
    "material": [
      {
        "face": "facer",
        "id": 56538,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serials",
        "uniq": "uniqn",
        "workorder": "work6",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:39:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events > after filter - tool use 1`] = `
Map {
  "{part: part222}, proc: 2, statGroup: MC, operation: prog8}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.4666666666666667,
          "toolChanged": true,
          "toolName": "9",
        },
        {
          "cycleUsageMinutes": 0.38333333333333336,
          "toolChanged": false,
          "toolName": "w",
        },
      ],
    },
  ],
  "{part: part222}, proc: 1, statGroup: MC, operation: progt}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.26666666666666666,
          "toolChanged": false,
          "toolName": "v",
        },
        {
          "cycleUsageMinutes": 0.35,
          "toolChanged": true,
          "toolName": "m",
        },
      ],
    },
  ],
  "{part: part111}, proc: 1, statGroup: MC, operation: progz}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChanged": false,
          "toolName": "5",
        },
        {
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChanged": true,
          "toolName": "v",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - buffers 1`] = `
[
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
]
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "{part: part111}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, proc: 1, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 2, statGroup: MC, operation: prog8}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part222}, proc: 1, statGroup: MC, operation: progt}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, proc: 1, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, proc: 2, statGroup: L/U, operation: LOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, proc: 1, statGroup: L/U, operation: UNLOAD}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - event counter 1`] = `9`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "{part: part222}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 52057,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 52057,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialp",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "worku",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 52057,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialp",
      "time": 2018-01-06T09:57:05.000Z,
      "workorder": "worku",
    },
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 34857,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriall",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workw",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 34857,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriall",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workw",
    },
  ],
  "{part: part111}, inspType: Insp1}" => [
    {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
    {
      "cntr": 9,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "work7",
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqi" => [
      70329,
    ],
    "uniqv" => [
      34857,
    ],
    "uniq7" => [
      52057,
    ],
  },
  "matsById": Map {
    "34857" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 34857,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "52057" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:05.000Z,
      "jobUnique": "uniq7",
      "last_event": 2018-01-06T09:57:05.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 52057,
      "numProcesses": 4,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "palaa" => [
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-01-06T09:50:05.000Z,
      "y": 44,
    },
  ],
  "palbb" => [
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    {
      "active": -1,
      "cntr": 9,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - station cycles 1`] = `
[
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "prog8",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "facek",
        "id": 52057,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialp",
        "uniq": "uniq7",
        "workorder": "worku",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progt",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "facem",
        "id": 34857,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "seriall",
        "uniq": "uniqv",
        "workorder": "workw",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 5,
    "isLabor": false,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 7,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "{part: part222}, proc: 2, statGroup: MC, operation: prog8}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.4666666666666667,
          "toolChanged": true,
          "toolName": "9",
        },
        {
          "cycleUsageMinutes": 0.38333333333333336,
          "toolChanged": false,
          "toolName": "w",
        },
      ],
    },
  ],
  "{part: part222}, proc: 1, statGroup: MC, operation: progt}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.26666666666666666,
          "toolChanged": false,
          "toolName": "v",
        },
        {
          "cycleUsageMinutes": 0.35,
          "toolChanged": true,
          "toolName": "m",
        },
      ],
    },
  ],
  "{part: part111}, proc: 1, statGroup: MC, operation: progz}" => [
    {
      "tools": [
        {
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChanged": false,
          "toolName": "5",
        },
        {
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChanged": true,
          "toolName": "v",
        },
      ],
    },
  ],
}
`;
